--- a/styiles/styile.css
+++ b/styiles/styile.css
@@ -222,20 +222,195 @@ a {
     opacity: 1;
 }
 
-.carousel-indicators .active[data-bs-target]::before{
+.carousel-indicators .active[data-bs-target]::before {
     opacity: 1;
 }
 
-.carousel-caption{
+.carousel-caption {
     height: 90%;
+}
+
+.sellers__container {
+    display: flex;
+    justify-content: space-between;
+}
+
+.nav-link-sellers {
+    position: relative;
+    padding: 20px;
+    border-radius: 50%;
+    border: 2px solid var(--c-red);
+    background-color: var(--c-red);
+}
+
+.nav-link-arrow {
+    position: absolute;
+    width: 14px;
+    height: 2px;
+    background-color: var(--c-white);
+    left: 13px;
+}
+
+.nav-link-arrow::before,
+.nav-link-arrow::after {
+    content: '';
+    position: absolute;
+    width: 7px;
+    height: 2px;
+    background-color: var(--c-white);
+    left: -1px;
+}
+
+.nav-link-arrow-1::after {
+    transform: rotate(315deg);
+    bottom: 2px;
+}
+
+.nav-link-arrow-1::before {
+    transform: rotate(45deg);
+    bottom: -2px;
+}
+
+.nav-link-arrow-2::after {
+    right: -1px;
+    left: auto;
+    transform: rotate(45deg);
+    bottom: 2px;
+}
+
+.nav-link-arrow-2::before {
+    right: -1px;
+    left: auto;
+    transform: rotate(315deg);
+    bottom: -2px;
+}
+
+.nav-link-sellers-1:hover .nav-link-arrow-1 {
+    background-color: var(--c-red);
+}
+.nav-link-sellers-1:hover .nav-link-arrow-1::before {
+    background-color: var(--c-red);
+}
+.nav-link-sellers-1:hover .nav-link-arrow-1::after {
+    background-color: var(--c-red);
+}
+
+.nav-link-sellers-2:hover .nav-link-arrow-2 {
+    background-color: var(--c-red);
+}
+.nav-link-sellers-2:hover .nav-link-arrow-2::before {
+    background-color: var(--c-red);
+}
+.nav-link-sellers-2:hover .nav-link-arrow-2::after {
+    background-color: var(--c-red);
+}
+
+.background-grey{
+    background-color: #f4f1ea;
+}
+
+.sellers__content-title{
+    margin-top: 20px;
+    font-family: var(--f-R);
+    font-weight: 700;
+    font-size: 28px;
+    text-align: center;
+    color: var(--c-black);
+}
+
+.sellers__content-desc{
+    font-family: var(--f-R);
+    font-size: 20px;
+    color: var(--c-red);
+    text-align: center;
+}
+
+.nav-link-sellers-1:hover{
+    background-color: rgba(149, 150, 150, 0);
+}
+
+.nav-link-sellers-2:hover{
+    background-color: rgba(149, 150, 150, 0);
+}
+
+.sellers__item{
+    background-color: var(--c-white);
+    border-radius: 20px;
+    padding: 74px;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+.sellers__content{
+    justify-content: center;
+}
+
+.sellers__box-title{
+    font-family: var(--f-R);
+    font-weight: 900;
+    font-size: 80px;
+    margin-left: 17px;
+    margin-bottom: 50px;
+}
+
+.sellers__box-desc{
+    color: var(--c-red);
+    font-size: 25px;
+    font-family: var(--f-R);
+    font-weight: 700;
+    margin-left: 20px;
+    margin-top: 20px;
+    margin-bottom: 0;
+}
+
+.sellers-link-list{
+    margin-top: 20px;
+}
+
+.sellers__content-line{
+    display: flex;
+    margin-left: 62px;
+    height: 2px;
+    width: 120px;
+    background-color: var(--c-red);
+}
+
+.sellers__content-pic{
+    width: 100%;
+    height: 100%;
+}
+
+.background-pic-tomato, .background-pic-burger{
+    position: absolute;
+    left: 0;
+    top: 70px;
+}
+
+.background-pic-burger{
+    top: 720px;
+    left: auto;
+}
+
+.background-grey{
+    position: relative;
 }
 
 
 
 
-@media(max-width:1400px){
-    .carousel__content-title{
+
+
+
+
+
+
+@media(max-width:1400px) {
+    .carousel__content-title {
         font-size: 145px;
+    }
+
+    .sellers__item{
+        padding: 45px;
     }
 }
 
@@ -247,9 +422,17 @@ a {
     .navbar__menu-logo::before {
         left: 234px;
     }
-    
-    .carousel__content-title{
+
+    .carousel__content-title {
         font-size: 115px;
+    }
+
+    .sellers__content-line{
+        margin-left: 62px;
+    }
+
+    .sellers__item{
+        padding: 18px;
     }
 }
 
@@ -285,12 +468,28 @@ a {
         font-size: 16px;
     }
 
-    .carousel__content-desc{
+    .carousel__content-desc {
         font-size: 22px;
     }
 
-    .carousel__content-title{
+    .carousel__content-title {
         font-size: 85px;
+    }
+
+    .sellers__box-title{
+        font-size: 60px;
+    }
+
+    .sellers__content{
+        flex-wrap: wrap;
+    }
+
+    .sellers__item:last-of-type{
+        margin-top: 30px;
+    }
+
+    .background-pic-tomato, .background-pic-burger{
+        display: none;
     }
 }
 
@@ -305,6 +504,23 @@ a {
 
     .navbar-top__content-link:first-of-type {
         padding-left: 8px;
+    }
+
+    .sellers__box-title{
+        font-size: 43px;
+    }
+
+    .sellers__box-desc{
+        margin-left: 17px;
+        font-size: 22px;
+    }
+
+    .sellers__item{
+        margin-top: 30px;
+    }
+
+    .sellers__item:first-of-type{
+        margin-top: 0;
     }
 }
 
@@ -355,5 +571,9 @@ a {
     .navbar-top__content-link:first-of-type {
         padding-left: 8px;
         margin-left: 6px;
+    }
+
+    .sellers__box-title{
+        font-size: 35px;
     }
 }
