--- a/styiles/fonts.css
+++ b/styiles/fonts.css
@@ -2,3 +2,18 @@
     src: url(../fonts/Khand-Regular.ttf);
     font-family: 'Khand';
 }
+
+@font-face{
+    src: url(../fonts/fa-light-300.ttf);
+    font-family: 'FA-L';
+}
+
+@font-face{
+    src: url(../fonts/fa-regular-400.ttf);
+    font-family: 'FA-R';
+}
+
+@font-face{
+    src: url(../fonts/fa-solid-900.ttf);
+    font-family: 'FA-S';
+}
