--- a/styiles/styile.css
+++ b/styiles/styile.css
@@ -20,6 +20,7 @@ a {
     --c-white: white;
     --c-black: black;
     --c-grey: #afa9ac;
+    --c-green: #00813d;
     --f-R: 'Khand';
     --f-fa-l: 'FA-L';
     --f-fa-r: 'FA-R';
@@ -533,7 +534,7 @@ a {
     font-size: 30px;
     color: var(--c-white);
     padding: 30px 50px;
-    background-color: rgb(0, 196, 0);
+    background-color: var(--c-green);
     border-radius: 10px;
     width: 263px;
 }
@@ -592,6 +593,171 @@ a {
     }
 }
 
+.menu{
+    margin-top: 100px;
+}
+
+.menu-desc{
+    font-family: var(--f-R);
+    font-weight: 700;
+    color: var(--c-red);
+    font-size: 25px;
+    text-align: center;
+}
+
+.menu-title{
+    font-family: var(--f-R);
+    font-weight: 900;
+    color: var(--c-black);
+    font-size: 70px;
+    text-align: center;
+    margin-bottom: 50px;
+}
+
+.menu__content{
+    display: grid;
+    grid-auto-rows: 520px;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 30px;
+}
+
+.menu__item-pic{
+    background-color: var(--c-white);
+    padding: 15px;
+    border-radius: 20px;
+    position: relative;
+    height: 300px;
+    width: 263px;
+    transition: 300ms;
+}
+
+.menu__content-star span{
+    font-family: var(--f-fa-s);
+    padding: 5px;
+    color: var(--c-yellow);
+}
+
+.menu__item-pic span{
+    font-family: var(--f-fa-r);
+    padding: 5px;
+    transition: 300ms;
+}
+
+.menu__content-price{
+    font-family: var(--f-R);
+    font-weight: 700;
+    font-size: 20px;
+    margin-top: 38px;
+    text-align: center;
+    transition: 300ms;
+    color: var(--c-grey);
+}
+
+.menu__content-price .menu__content-price-prs{
+    padding: 8px 9px;
+    background-color: var(--c-yellow);
+    border-radius: 5px;
+    color: var(--c-black);
+}
+
+.menu__content-price .menu__content-price-red{
+    color: var(--c-red);
+    margin-right: 7px;
+    margin-left: 7px;
+}
+
+.menu__content-title{
+    font-family: var(--f-R);
+    font-size: 28px;
+    font-weight: 700;
+    text-align: center;
+}
+
+.menu__content-btn{
+    padding: 10px 40px;
+    border-radius: 30px;
+    font-family: var(--f-R);
+    font-weight: 700;
+    font-size: 22px;
+    color: var(--c-white);
+    background-color: var(--c-black);
+    margin-left: 40px;
+    position: relative;
+    opacity: 0;
+    transition: 300ms;
+}
+
+.menu__content-btn i{
+    font-family: var(--f-fa-l);
+}
+
+.menu__item-pic span{
+    padding: 13px;
+    color: var(--c-white);
+    background-color: var(--c-black);
+    border-radius: 8px;
+    font-size: 20px;
+    position: absolute;
+    top: 14px;
+}
+
+.menu__content-star{
+    margin-left: 70px;
+}
+
+.menu__item{
+    padding: 17px;
+    transition: 300ms;
+    height: 545px;
+    border-radius: 30px;
+}
+
+.menu__item:hover{
+    background-color: var(--c-yellow);
+}
+
+.menu__item:hover .menu__item-pic{
+    background-color: var(--c-yellow);
+}
+
+.menu__item:hover .menu__content-star span{
+    color: var(--c-white);
+}
+
+.menu__item:hover .menu__content-price-prs{
+    background-color: var(--c-white);
+}
+
+.menu__item:hover .menu__content-price{
+    color: var(--c-black);
+}
+
+.menu__item:hover .menu__item-pic span{
+    background-color: var(--c-white);
+    color: var(--c-yellow);
+}
+
+.menu__item:hover .menu__content-btn{
+    opacity: 1;
+}
+
+.menu-btn{
+    font-family: var(--f-R);
+    font-weight: 700;
+    font-size: 30px;
+    color: var(--c-white);
+    padding: 30px 50px;
+    background-color: var(--c-green);
+    border-radius: 10px;
+    width: max-content;
+    display: block;
+    margin: 50px auto 0;
+}
+
+.menu-btn i{
+    font-family: var(--f-fa-l);
+}
+
 
 
 
@@ -610,6 +776,10 @@ a {
 
     .chiken__content-pic-chik{
         width: 52%;
+    }
+
+    .menu__content{
+        grid-template-columns: repeat(3, 1fr);
     }
 }
 
@@ -736,6 +906,10 @@ a {
     .chiken__content-pic-chik{
         width: 84%;
     }
+
+    .menu__content{
+        grid-template-columns: repeat(2, 1fr);
+    }
 }
 
 @media(max-width:768px) {
@@ -782,6 +956,15 @@ a {
 
     .chiken__content{
         z-index: 1;
+    }
+
+    .menu__content{
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .menu__content-title, .menu__content-price, .menu__content-star{
+        text-align: start;
+        margin-left: 0;
     }
 }
 
